fixed a image overlapping footer bug

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -233,7 +233,7 @@ button {
 footer {
     padding: 2em;
     text-align: center;
-    margin-top: auto;
+    margin-top: 180px;
 }
 
 .footer-nav-list {
@@ -330,6 +330,12 @@ footer {
         padding: 0.25em 1.025em;
     }
 
+    footer {
+        padding: 2em;
+        text-align: center;
+        margin-top: auto;
+    }
+
     .social a {
         color: black;
         font-size: 12px;
@@ -411,7 +417,6 @@ footer {
     .content-width {
         width: 86%;
         margin: 0 auto;
-        margin-bottom: 250px;
     }
     
     .slideshow {
@@ -523,7 +528,7 @@ footer {
     .link-container {
         display: flex;
         justify-content: start;
-        gap: 2em;
+        gap: 0;
     }
     
     .repository a,
@@ -659,15 +664,14 @@ footer {
     }
 
     footer {
-        display: none;
+        /* display: none; */
         padding: 0;
         text-align: center;
         position: fixed;
         left: 0;
         right: 0;
         bottom: 0;
-        margin-top: auto;
-        margin: 1em;
+        margin: 0;
     }
     
     .footer-nav-list {
